# rag-pipeline

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: deps.py
app/handler/: __init__.py  data_ingestion.py  embedding.py
app/messaging/: __init__.py  consumer.py  handlers.py  producer.py
app/models/: ask.py  common.py  upload.py
app/routers/: ask.py  health.py  upload.py
config/: llm.py  qdrant.py  rabbitmq.py  settings.py
infra/: docker-compose.yml
