[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.5.0",
    "fastapi[standard]>=0.135.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.27",
    "langchain-text-splitters>=1.1.1",
    "numpy>=2.4.4",
    "pydantic-settings>=2.0.0",
    "pymupdf>=1.27.2.2",
    "sentence-transformers>=5.3.0",
]
